# webcam-guardian

./: .env.example  .gitignore  ACKNOWLEDGMENTS.md  AUDIT-FIXES.md  BUILD-PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RECORDING.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Verdict/: REVIEW-v0.3.0.md
docs/: AUDIT.md
guardian/: __init__.py  __main__.py  capture.py  config.py  detective.py  escalate.py  main.py  overlay.py  storage.py
guardian/alerts/: __init__.py  base.py  desktop.py  factory.py  ntfy.py  resend.py  telegram.py
guardian/guard/: __init__.py  base.py  la_client.py  rtdetr.py  yolo.py
guardian/prompts/: judge.txt
scripts/: capture_frames.py  debug_detect.py  dry_test_judgment.py  list_cameras.py  make_assets.py  make_social_preview.py  measure.py  preview_camera.py  record_demo.sh  run_e2e.py  sanity_ollama.py  smoke_alerts.py  smoke_camera.py  smoke_detective.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/ui/: index.html  main.js  package-lock.json  package.json  styles.css  tailwind.config.js  vite.config.ts
src-tauri/ui/src/: App.tsx
src-tauri/ui/src/components/: AnimatedGradientText.tsx  BackgroundGradient.tsx  MovingBorder.tsx  Spotlight.tsx  StatusPill.tsx
src-tauri/ui/src/lib/: tauri.ts
src-tauri/ui/src/styles/: globals.css
tests/: test_blur.py  test_escalate.py  test_parsing.py  test_stall.py  test_storage.py  test_worker_path.py  test_ws_origin.py
