[project]
name = "webcam-guardian"
version = "0.1.0"
description = "Two-tier webcam guardian: free local vision guard + bring-your-own OpenAI-compatible detective."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
authors = [{name = "Webcam Guardian contributors"}]
dependencies = [
  "opencv-python>=4.10",
  "torch>=2.4",
  "transformers>=4.48",
  "openai>=1.60",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "psutil>=5.9",
  "Pillow>=10.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
desktop = ["desktop-notifier>=6.2"]
test = ["pytest>=8.0"]

[project.scripts]
webcam-guardian = "guardian.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["guardian*"]

[tool.setuptools.package-data]
guardian = ["prompts/judge.txt"]
